--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="input-wrapper"><input class="field" type="text" name="telefone" placeholder="Telefone *"></span>
             <span class="input-wrapper"><textarea class="field" rows="5" placeholder="Mensagem *"></textarea></span>
             <p>* campos obrigatórios</p>
-            <input class="send" type="submit" value="Enviar">
+            <input class="send" type="button" value="Enviar">
         </form>
     </main>
 
